  * Adapt kdm_vt_switching_on_kfreebsd.diff patch to upstream changes in 4.6
    and reenable the patch.
  * Confirm symbol files on all Debian arches.

  [ Felix Geyer ]
  * Make plasma-widgets-workspace provide notification-daemon since the
    notifications applet implements the galago spec.

  [ José Manuel Santamaría Lema ]
  * Bump kde-sc-dev-latest build dependency to 4:4.6.4.

 -- Modestas Vainius <modax@debian.org>  Fri, 03 Jun 2011 01:11:58 +0300

kdebase-workspace (4:4.6.3-1) unstable; urgency=low

  * New upstream release:
    - fixes shutdown with default kdm config (Closes: #627917);

  [ José Manuel Santamaría Lema ]
  * Bump kde-sc-dev-latest build dependency to 4:4.6.3.
  * Remove fix_temperature_sensors.diff, applied upstream.
  * Update symbols files.

  [ Modestas Vainius ]
  * Make kdebase-workspace-bin break polkit-kde-1 (<< 0.99).
  * Add DLRestriction "REJECT:OTHERSOVERSION" to all libs on Debian (patch
    enable_dlrestrcitions.diff). Requires kdelibs5-dev 4.6.3 and
    libdlrestrictions-dev 0.14.
  * Update symbol files: DLRestrictions symbols added.

  [ Pino Toscano ]
  * Make plasma-scriptengine-python recommend python-qt4-dbus, as Python
    widgets could use D-Bus functions. (Closes: #619511)

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 26 May 2011 02:41:32 +0300

kdebase-workspace (4:4.6.2-2) experimental; urgency=low

  [ Pino Toscano ]
  * Make kdm recommend server-xorg, not xserver-xorg-core. (Closes: #624342)

  [ Modestas Vainius ]
  * Confirm symbol files on more debian arches.
  * Build depend on libglib2.0-dev. This should fix FTBFS on kFreeBSD.
  * Bump Standards-Version to 3.9.2: no changes needed.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 02 May 2011 03:06:18 +0300

kdebase-workspace (4:4.6.2-1) experimental; urgency=low

  * New upstream release:
    - adds authorization support to the login manager configuration module
      (Closes: #523094)