@@ -1,6 +1,6 @@
 --- a/kdm/kfrontend/genkdmconf.c
 +++ b/kdm/kfrontend/genkdmconf.c
-@@ -613,7 +613,7 @@ static const char def_xaccess[] =
+@@ -613,7 +613,7 @@
  "# right hand sides can match.\n"
  "#\n"
  "\n"
@@ -9,7 +9,7 @@
  "\n"
  "#\n"
  "# To hardwire a specific terminal to a specific host, you can\n"
-@@ -631,7 +631,7 @@ static const char def_xaccess[] =
+@@ -631,7 +631,7 @@
  "# so this may not work in all environments.\n"
  "#\n"
  "\n"
@@ -18,7 +18,7 @@
  "\n"
  "#\n"
  "# If you would prefer to configure the set of hosts each terminal sees,\n"
-@@ -667,16 +667,18 @@ static const char def_startup[] =
+@@ -667,16 +667,18 @@
  "#! /bin/sh\n"
  "# Xstartup - run as root before session starts\n"
  "\n"
@@ -46,7 +46,7 @@
  "\n"
  "# NOTE: The session is aborted if the last command returns non-zero.\n";
  
-@@ -722,6 +724,7 @@ static const char def_session1[] =
+@@ -722,6 +724,7 @@
  "    [ -f $zhome/.zprofile ] && . $zhome/.zprofile\n"
  "    [ -f $zdir/zlogin ] && . $zdir/zlogin\n"
  "    [ -f $zhome/.zlogin ] && . $zhome/.zlogin\n"
@@ -54,16 +54,20 @@
  "    ;;\n"
  "  */csh|*/tcsh)\n"
  "    # [t]cshrc is always sourced automatically.\n"
-@@ -739,32 +742,8 @@ static const char def_session2[] =
+@@ -739,36 +742,8 @@
  "    ;;\n"
  "esac\n"
  "\n"
 -"[ -f /etc/xprofile ] && . /etc/xprofile\n"
 -"[ -f $HOME/.xprofile ] && . $HOME/.xprofile\n"
 -"\n"
--"for i in /etc/X11/Xresources/*; do\n"
--"  [ -f $i ] && xrdb -merge $i\n"
--"done\n"
+-"if [ -d /etc/X11/Xresources ]; then\n"
+-"  for i in /etc/X11/Xresources/*; do\n"
+-"    [ -f $i ] && xrdb -merge $i\n"
+-"  done\n"
+-"elif [ -f /etc/X11/Xresources ]; then\n"
+-"  xrdb -merge /etc/X11/Xresources\n"
+-"fi\n"
 -"[ -f $HOME/.Xresources ] && xrdb -merge $HOME/.Xresources\n"
 -"\n"
 -"case $session in\n"
@@ -89,7 +93,7 @@
  
  static const char def_background[] =
  "[Desktop0]\n"
-@@ -1115,29 +1094,6 @@ getInitTab(void)
+@@ -1119,29 +1094,6 @@
  
      if (maxTTY)
          return;
